app/ci/k8s/redis-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
   type: ClusterIP #used for internal services that will not be exposed
   ports:
   - port: 6379
     targetPort: 6379  #if not included it will assune port (service port) to be the same as targetPort (pod port)
    #  nodePort: 30004
   selector:
    app: redis #this is used to bind this service to the deployment 
    tier: mem-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis 
    tier: mem-cache
spec:
  selector:
    matchLabels:
      app: redis 
      tier: mem-cache
  replicas: 1
  template:
    metadata:
      name: redis
      labels:
        app: redis 
        tier: mem-cache
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
          - containerPort: 6379
            name: redis
